<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Foody Home</string>
    <string name="home">Home</string>
    <string name="my_menu">My Menu</string>
    <string name="my_wishlist">My Orders</string>
    <string name="discount_and_offers">Discount and Offers</string>
    <string name="logout">Logout</string>
    <string name="your_profile">Your Profile</string>
    <string name="share">Share</string>
    <string name="call_us">Call Us</string>
    <string name="chat_with_us">Chat with Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="web_client_id" translatable="false">1042709767127-36vkjapi03i99ajao63hb7erehos5qfv.apps.googleusercontent.com</string>
    <string name="off">OFF</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_registered_register_here">Not Registered? Register Here</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="signUp">SignUp</string>
    <string name="address">Address</string>
    <string name="already_registerd_login_here">Already Registerd?login here</string>
    <string name="foody_offers">Foody Offers</string>
    <string name="beverages_and_icecreams">Drinks/Icecreams</string>
    <string name="pasta">Pasta</string>
    <string name="burgers">Burgers</string>
    <string name="pizza">Pizza</string>
    <string name="change_or_add_address">Change or Add Address</string>
    <string name="remove">remove</string>
    <string name="grand_total">Grand Total</string>
    <string name="foodyhome_special_discount">FoodyHome Special Discount</string>
    <string-array name="Select_Store">
        <item>Select Store</item>
        <item>Pizza Buzzer</item>
        <item>The Pizza Station</item>
    </string-array>
    <string name="choice_of_add_on_s">Choice Of Add On\'s</string>
    <string name="Terms_and_Condition">

1.Individuals, aged 13 years or above can make a order from foodyhome. Customer will need an active email address and a telephone number which can be used for making a contact as necessary.
Customer takes the responsibility of maintaining the confidentiality of his/her account details including password and preventing unauthorised access to his/her account. Customer agrees to accept responsibility for all activities that occur from their account. Customer must take all necessary steps to ensure that the account credentials are kept confidential and secure and should inform the seller immediately in case customer has any reason to believe that his/her account credentials including user id and password are manipulated and/or used in an unauthorised manner.
Customer is solely responsible for providing the correct billing and delivery addresses.\n\n
2.Delivery will take place at the delivery address specified by customer during the ordering process.
When customer places an order from foody home, the order represents a non-binding agreement between the seller and the customer. A binding contract between seller and buyer forms only after a complete payment is fully authorised by the payment gateway and the goods are dispatched from our warehouse. Any order will be dispatched only after a successful authorisation of the billed amount.\n\n
3.All  items or offers shown on our catalogue are subjected to availability at any given time and may not be ready in our stock at all the time. If that is the case, we shall notify you with the date of availability by message or call. We have the right to discontinue any items, goods or offers from the app at any time, and our only liability in such cases will be limited to refund any money paid to us related to those goods or items which we may no longer be able to supply.  We will notify you about the same, as soon as possible.\n\n
4.We put our utmost efforts to have your order delivered as fast as possible. Any delays made by the delivery service is beyond our control and our liability.\n\n
5.In case a order is returned undelivered or refused at the time of delivery, we reserve the right to charge the full shipping charges for both back and forth sending of order and any other applicable fee and transaction charges. In such cases, perishable items are excluded from any claims for refund.\n\n
6.In case customer decides to cancel an order, we reserve the right to charge the applicable transaction charges.\n\n
7.Order with incomplete payment or non-payment shall be on hold until a complete payment is made. In case such orders are not paid, they shall be automatically cancelled and the cancellation charges may be applied accordingly
Order and the  food item to adjust prices, goods and special offers at our discretion.\n\n

8.Free shipping is considered as offer and is complementary. We may decline to offer free shipping at our discretion.\n\n
9.Please note that pictures and images on foodyhome are only for illustration purpose. Actual product may look different than that is shown in the image.\n\n
10.We keep the rights reserved to refuse to fulfill an order. If an order is refused for fulfillment, an sms communication shall follow.\n\n
Our entire liability to you does not exceed the order cost you have paid.\n\n
11.The app  may not be reproduced, duplicated, copied, sold, resold, or otherwise exploited for any commercial or non-commercial purpose without our written consent.\n\n
12.You may not frame or use framing techniques to enclose any trademark, logo, or other proprietary information (including images, text, page layout, or form) of foodyhome  and its affiliate without  a written consent from the seller.
All the food images and trademarks are proprietary of the respective owner company.\n\n
13.You may not use any meta tags or any other “hidden text” utilizing foodyhome or its affiliates’ names or trademarks without the written consent of foodyhome.
We reserve the right to change the sale terms and the Return Policy at any time without notifying the customer.\n\n


    </string>
    <string name="Refund_Policy">
        A.    The user  shall be entitled to a refund only if you pre-pay for your order at the time of placing your order on the Platform and only in the event of any of the following circumstances:\n\n
        <br /><br />
      1.    The  order packaging has been tampered or damaged at the time of delivery;\n\n
        <br />
          2. The order can be cancelled due to:\n\n
<br /><br />
 (a) Your delivery location following outside our designated delivery zones;\n\n
<br /><br />
b) Failure to contact you by phone or email at the time of confirming the order booking or\n\n
<br /><br />

        (c) Where the user cancels the order at the time of confirmation due to unavailability of the items you ordered for at the time of booking.\n\n
        <br /><br />
B) The decision on refunds shall be at the sole discretion of the Food Delivery Platform and shall be final and binding.\n\n
        <br /><br />
        C) All refund amounts shall be credited to your account within 3-4 business days in accordance with the terms that may be stipulated by the bank which has issued the credit/debit card.\n\n
        <br /><br />
        <b>
            <font size="+22">
        II.    PAYMENTS:\n\n
            </font>
        </b>
<br /><br />
In case of payment at the time of delivery, the user shall not be required to pay for:\n\n
<br /><br />
a)    Orders where the packaging has been tampered or damaged by us;\n\n
<br></br>
b)    Wrong order being delivered;\n\n
<br></br>
c)    Items missing from your order at the time of delivery.\n\n
    </string>
</resources>